--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database= contact_app
-spring.data.mongodb.username=root
+spring.data.mongodb.database= contactsystem
+spring.data.mongodb.username=peejay
 spring.data.mongodb.password=peejay@07
 
-spring.data.mongodb.uri=mongodb://localhost:27017/contactapp
+spring.data.mongodb.uri=mongodb://localhost:27017/contactsystem
